--- a/b.html
+++ b/b.html
@@ -22,9 +22,9 @@
       <li><img class="skeleton" src="skeleton.svg"></li>
     </ul>
     <footer> 
-      <a href="/"> A </a>
-      <a href="/skeleton"> Skeleton </a>
-      <a href="/b" class="active"> B </a>
+      <a href="index.html"> A </a>
+      <a href="skeleton.html"> skeleton </a>
+      <a href="b.html" class="active"> B </a>
     </footer>
   </div>
   <script async type="text/javascript" src="app.js"></script>
