--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <li><img class="skeleton" src="skeleton.svg"></li>
     </ul>
     <footer> 
-      <a href="/" class="active"> A </a>
-      <a href="/skeleton"> Skeleton </a>
-      <a href="/b"> B </a>
+      <a href="index.hteml" class="active"> A </a>
+      <a href="skeleton.html"> skeleton </a>
+      <a href="b.html"> B </a>
     </footer>
   </div>
   <script type="text/javascript">
