--- a/skeleton.html
+++ b/skeleton.html
@@ -22,9 +22,9 @@
       <li><img class="skeleton" src="skeleton.svg"></li>
     </ul>
     <footer> 
-      <a href="/"> A </a>
-      <a href="/skeleton" class="active"> Skeleton </a>
-      <a href="/b"> B </a>
+      <a href="index.html"> A </a>
+      <a href="skeleton.html" class="active"> skeleton </a>
+      <a href="b.html"> B </a>
     </footer>
   </div>
 </body>
